Changed cursor to hand when hovering over collapsed book tile Fixes #265

--- a/app/assets/stylesheets/book.css.scss
+++ b/app/assets/stylesheets/book.css.scss
@@ -9,6 +9,7 @@ $cart-view-width: 250px;
 .collapsed-book-tile {
   height: 180px;
   padding: 10px;
+  cursor: pointer;
 }
 
 .media-heading {
